Bunch 'o tweaks Eliminated the use of the login form in favor of doing it all in the Users dialog Bumped the close button size to fa-2x Also added role="button" everywhere where there's clickable stuff, to turn the cursor into a hand/finger. Cleaned up cruft from the CSS style Switched (har har) to using ng-switch instead of ng-if when making binary choices between empty and non-empty list.

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 				<button class="btn btn-primary navbar-btn" title="Toggle Development Mode" ng-click="settings.toggleDevelopment()"><i class="fa fa-lg" ng-class="settings.isDevelopment() ? 'fa-toggle-on' : 'fa-toggle-off'"></i>&nbsp;<i class="fa fa-lg fa-gear"></i></button>
 				<button class="btn btn-danger navbar-btn" ng-click="login()" ng-show="!isLoggedIn()"><i class="fa fa-lg fa-unlock"></i>&nbsp;Login</button>
 				<button class="btn btn-danger navbar-btn" ng-click="logout()" ng-show="isLoggedIn()"><i class="fa fa-lg fa-lock"></i>&nbsp;Logout</button>
-				<button class="btn btn-info navbar-btn" ng-click="modifyUsers()"><i class="fa fa-lg fa-users"></i>&nbsp;Users</button>
+				<button class="btn btn-info navbar-btn" ng-click="selectUser()"><i class="fa fa-lg fa-users"></i>&nbsp;Users</button>
 			</div>
 		</div>
 	</body>
