--- a/public/autosave.html
+++ b/public/autosave.html
@@ -1,6 +1,6 @@
 <div class="modal-header bg-primary">
 	<h4 class="modal-title pull-left">Autosave Settings</h4>
-	<i class="fa fa-lg fa-close pull-right" ng-click="$dismiss('cancel')"></i>
+	<i class="fa fa-2x fa-close pull-right" role="button" ng-click="$dismiss('cancel')"></i>
 </div>
 <div class="modal-body">
 	<form class="form-horizontal">
