--- a/public/docs.html
+++ b/public/docs.html
@@ -1,6 +1,6 @@
 <div class="modal-header bg-primary">
-	<h4 class="modal-title pull-left"><span ng-if="currentUser">{{currentUser.getName()}}'s</span><span ng-if="!currentUser">Shared</span> Documents on <strong ng-click="selectStorage()">{{currentVolume.label}}&nbsp;<i class="fa fa-lg fa-caret-down"></i></strong></h4>
-	<i class="fa fa-lg fa-close pull-right" ng-click="$dismiss('cancel')"></i>
+	<h4 class="modal-title pull-left"><span ng-if="currentUser">{{currentUser.getName()}}'s</span><span ng-if="!currentUser">Shared</span> Documents on <strong role="button" ng-click="selectStorage()">{{currentVolume.label}}&nbsp;<i class="fa fa-lg fa-caret-down"></i></strong></h4>
+	<i class="fa fa-2x fa-close pull-right" role="button" ng-click="$dismiss('cancel')"></i>
 </div>
 <div class="modal-body">
 	<table class="table table-condensed table-hover">
@@ -12,16 +12,14 @@
 				<th>Actions</th>
 			</tr>
 		</thead>
-		<tbody ng-if="documents.length > 0">
-			<tr class="doc-row" ng-repeat="doc in documents | orderBy: 'name'" ng-model="doc" ng-hide="doc.removed">
+		<tbody ng-switch="documents.length">
+			<tr ng-switch-default role="button" ng-repeat="doc in documents | orderBy: 'name'" ng-model="doc" ng-hide="doc.removed">
 				<td ng-click="selectDoc(doc)">{{doc.name}}</td>
 				<td ng-click="selectDoc(doc)">{{doc.modified | date: 'medium' }}</td>
 				<td ng-click="selectDoc(doc)">{{doc.size | bytes}}</td>
-				<td><i class="fa fa-lg fa-trash" ng-click="deleteDoc(doc)" title="Delete"></i></td>
+				<td><i class="fa fa-lg fa-trash" role="button" ng-click="deleteDoc(doc)" title="Delete"></i></td>
 			</tr>
-		</tbody>
-		<tbody ng-if="documents.length == 0">
-			<tr>
+			<tr ng-switch-when="0">
 				<td colspan="4" class="text-center">No saved documents</td>
 			</tr>
 		</tbody>
