--- a/public/login.html
+++ b/public/login.html
@@ -1,6 +1,6 @@
 <div class="modal-header bg-primary">
 	<h4 class="modal-title pull-left">Login <i class="fa fa-lg fa-fw fa-spinner fa-spin" ng-show="loading == true"></i></h4>
-	<i class="fa fa-lg fa-close pull-right" ng-click="$dismiss('cancel')"></i>
+	<i class="fa fa-2x fa-close pull-right" role="button" ng-click="$dismiss('cancel')"></i>
 </div>
 <div class="modal-body">
 	<form class="form-horizontal" ng-submit="ok()">
@@ -13,7 +13,7 @@
 		<div class="form-group">
 			<label for="password" class="col-sm-2 control-label">Password</label>
 			<div class="col-sm-10">
-				<input class="form-control" type="password" ng-model="password" ng-enter="ok()"></input>
+				<input class="form-control" type="password" ng-model="password" ng-minlength="3" ng-enter="ok()"></input>
 			</div>
 		</div>
 	</form>
