--- a/public/password.html
+++ b/public/password.html
@@ -1,19 +1,19 @@
 <div class="modal-header bg-primary">
 	<h4 class="modal-title pull-left">{{title}}</h4>
-	<i class="fa fa-lg fa-close pull-right" ng-click="$dismiss('cancel')"></i>
+	<i class="fa fa-2x fa-close pull-right vertical-center" role="button" ng-click="$dismiss('cancel')"></i>
 </div>
 <div class="modal-body">
 	<form class="form-horizontal" ng-submit="ok()">
 		<div class="form-group">
 			<label for="password" class="col-sm-3 control-label">Password</label>
 			<div class="col-sm-9">
-				<input class="form-control" type="password" autofocus ng-model="password" ng-enter="ok()"></input>
+				<input type="password" class="form-control" placeholder="Enter password" autofocus ng-minlength="3" ng-model="password" ng-enter="ok()"></input>
 			</div>
 		</div>
 		<div class="form-group" ng-if="extra.label">
 			<label for="password" class="col-sm-3 control-label">{{extra.label}}</label>
 			<div class="col-sm-9">
-				<input class="form-control" type="text" ng-model="extra.value" ng-enter="ok()"></input>
+				<input type="{{extra.is_password ? 'password' : 'text'}}" class="form-control" placeholder="Enter {{extra.label | lowercase}}" ng-model="extra.value" ng-enter="ok()"></input>
 			</div>
 		</div>
 	</form>
