Clean up the look of the autosave dialog.

--- a/public/autosave.html
+++ b/public/autosave.html
@@ -14,7 +14,7 @@
 			<div class="col-sm-offset-2 col-sm-10">
 				<div class="checkbox">
 					<label>
-						<input ng-model="tempName.use" type="checkbox" ng-disabled="frequency == never">Use Temporary Name: <samp class="bg-info">{{tempName.pattern}}</samp> <i class="fa fa-lg fa-long-arrow-right"></i> <samp class="bg-success">{{tempName.name}}</samp></input>
+						<input ng-model="tempName.use" type="checkbox" ng-disabled="frequency == never">Use Temporary Name: <samp>{{tempName.pattern}}</samp></input>
 					</label>
 				</div>
 			</div>
