--- a/public/index.html
+++ b/public/index.html
@@ -44,9 +44,7 @@
 				<button class="btn btn-primary navbar-btn" ng-click="selectStorage()"><i class="fa fa-lg fa-database"></i>&nbsp;Storage</button>
 				<button class="btn btn-primary navbar-btn" ng-click="selectAutoSave()"><i class="fa fa-lg fa-hourglass-start"></i>&nbsp;AutoSave</button>
 				<button class="btn btn-primary navbar-btn" title="Toggle Development Mode" ng-click="settings.toggleDevelopment()"><i class="fa fa-lg" ng-class="settings.isDevelopment() ? 'fa-toggle-on' : 'fa-toggle-off'"></i>&nbsp;<i class="fa fa-lg fa-gear"></i></button>
-				<button class="btn btn-danger navbar-btn" ng-click="login()" ng-show="!isLoggedIn()"><i class="fa fa-lg fa-unlock"></i>&nbsp;Login</button>
-				<button class="btn btn-danger navbar-btn" ng-click="logout()" ng-show="isLoggedIn()"><i class="fa fa-lg fa-lock"></i>&nbsp;Logout</button>
-				<button class="btn btn-info navbar-btn" ng-click="selectUser()"><i class="fa fa-lg fa-users"></i>&nbsp;Users</button>
+				<button class="btn btn-warning navbar-btn" ng-click="selectUser()"><i class="fa fa-lg fa-users"></i>&nbsp;Users</button>
 			</div>
 		</div>
 	</body>
