Added optional timeout to MessageBox and Password dialogs

--- a/public/password.html
+++ b/public/password.html
@@ -1,6 +1,7 @@
 <div class="modal-header bg-primary">
 	<h4 class="modal-title pull-left">{{title}}</h4>
-	<i class="fa fa-2x fa-close pull-right vertical-center" role="button" ng-click="$dismiss('cancel')"></i>
+	<i class="fa fa-2x fa-close pull-right vertical-center" role="button" ng-click="cancel()"></i>
+	<i class="fa fa-2x fa-spinner fa-pulse pull-right vertical-center" ng-if="extra.timeout"></i>
 </div>
 <div class="modal-body">
 	<form class="form-horizontal" ng-submit="ok()">
