--- a/public/users.html
+++ b/public/users.html
@@ -1,7 +1,7 @@
 <div class="modal-header bg-primary">
 	<h4 class="modal-title pull-left">Users</h4>
 	<i class="fa fa-2x fa-close pull-right" role="button" ng-click="$dismiss('cancel')"></i>
-	<i class="fa fa-2x fa-spinner fa-spin" ng-show="loading == true"></i>
+	<i class="fa fa-2x fa-spinner fa-spin pull-right" ng-show="loading == true"></i>
 </div>
 <div class="modal-body">
 	<form name="new_user">
