--- a/public/index.html
+++ b/public/index.html
@@ -14,48 +14,33 @@
 		<script type="text/javascript" src="scripts/solo.js"></script>
 	</head>
 	<body ng-controller="SoloWriterCtrl">
-		<div ng-if="settings.isSlideShowMode()" ng-controller="SlideShowCtrl" class="slideshow">
+		<div ng-if="isLocked()" ng-controller="SlideShowCtrl" class="slideshow">
 			<div uib-carousel interval="interval" active="active" no-pause="true" no-wrap="false">
 				<div uib-slide ng-repeat="slide in slides" index="$index">
 					<img ng-src="{{slide.image}}">
 				</div>
 			</div>
 		</div>
-		<div id="body" ng-hide="settings.isSlideShowMode()">
+		<div id="body" ng-hide="isLocked()">
 			<div id="editor">
-				<textarea id="content" ng-attr-placeholder="Enter text..." ng-model="currentDocument.content" ng-change="setDirty()" ng-style="{ 'font-size': settings.getTextSize() }" ng-class="settings.hasBackgroundImage() ? 'logo' : ''" wrap="soft" autofocus></textarea>
+				<textarea id="content" ng-attr-placeholder="Enter text..." ng-model="currentDocument.content" ng-change="setDirty()" ng-style="settings.getTextSize().asStyle()" ng-class="showBackgroundImage ? 'logo' : ''" wrap="soft" autofocus></textarea>
 			</div>
 		</div>
-		<div id="footer" ng-hide="settings.isSlideShowMode()" ng-switch="settings.isSettingsMode()">
-			<div ng-switch-when="false" class="ng-cloak">
-				<div class="pull-left">
-					<button class="btn btn-warning navbar-btn" ng-click="resetDoc(true)"><i class="fa fa-lg fa-file-text-o"></i>&nbsp;New</button>
-					<button class="btn btn-success navbar-btn" ng-click="openDoc(true)"><i class="fa fa-lg fa-folder-open-o"></i>&nbsp;Open</button>
-					<button class="btn btn-primary navbar-btn" ng-click="saveDoc()" ng-disabled="!currentDocument.canSave()"><i class="fa fa-lg fa-save"></i>&nbsp;Save</button>
-					<input id="name" type="text" placeholder="Enter name..." ng-model="currentDocument.name" ng-minlength="1" ng-maxlength="256" ng-trim="true" ng-change="setDirty()"></input>
-				</div>
-				<div class="pull-right">
-					<button class="btn btn-warning navbar-btn" ng-click="lock()"><i class="fa fa-lg fa-lock"></i></button>
-					<button class="btn btn-info navbar-btn" ng-click="settings.enterSettings()"><i class="fa fa-lg fa-gear"></i>&nbsp;Settings</button>
-					<div class="btn-group" role="group" ng-disabled="currentDocument.isDirty()" ng-switch="settings.isDevelopment()">
-						<button class="btn btn-danger navbar-btn" ng-switch-when="true" ng-click="quit()"><i class="fa fa-lg fa-power-off"></i>&nbsp;Quit</button>
-						<button class="btn btn-danger navbar-btn" ng-switch-when="false" ng-click="shutdown()"><i class="fa fa-lg fa-power-off"></i>&nbsp;Power Off</button>
-					</div>
-				</div>
+		<div id="footer" ng-hide="isLocked()">
+			<div class="pull-left">
+				<button class="btn btn-warning navbar-btn" ng-click="resetDoc(true)"><i class="fa fa-lg fa-file-text-o"></i>&nbsp;New</button>
+				<button class="btn btn-success navbar-btn" ng-click="openDoc(true)"><i class="fa fa-lg fa-folder-open-o"></i>&nbsp;Open</button>
+				<button class="btn btn-primary navbar-btn" ng-click="saveDoc()" ng-disabled="!currentDocument.canSave()"><i class="fa fa-lg fa-save"></i>&nbsp;Save</button>
 			</div>
-			<div ng-switch-when="true" class="ng-cloak">
-				<button class="btn btn-success navbar-btn" ng-click="settings.exitSettings()"><i class="fa fa-lg fa-chevron-left"></i>&nbsp;Back</button>
-				<div class="btn-group" role="group" title="Adjust Text Size">
-					<button class="btn btn-primary navbar-btn" ng-click="settings.setTextSize(2)"><i class="fa fa-lg fa-caret-up"></i></button>
-					<button class="btn btn-primary navbar-btn" ng-click="settings.setTextSize()"><i class="fa fa-font"></i></button>
-					<button class="btn btn-primary navbar-btn" ng-click="settings.setTextSize(-2)"><i class="fa fa-lg fa-caret-down"></i></button>
+			<div class="pull-right">
+				<button class="btn btn-primary navbar-btn" ng-click="selectSettings()"><i class="fa fa-lg fa-gear"></i>&nbsp;Settings</button>
+				<button class="btn btn-info navbar-btn" ng-click="selectUser()"><i class="fa fa-lg fa-users"></i>&nbsp;Users</button>
+				<button class="btn btn-success navbar-btn" ng-click="lock()"><i class="fa fa-lg fa-lock"></i>&nbsp;Lock</button>
+				<div class="btn-group" role="group" ng-disabled="currentDocument.isDirty()" ng-switch="settings.isDevelopment()">
+					<button class="btn btn-warning navbar-btn" ng-switch-when="true" ng-click="reload()"><i class="fa fa-lg fa-refresh"></i>&nbsp;Refresh</button>
+					<button class="btn btn-danger navbar-btn" ng-switch-when="true" ng-click="quit()"><i class="fa fa-lg fa-power-off"></i>&nbsp;Quit</button>
+					<button class="btn btn-danger navbar-btn" ng-switch-when="false" ng-click="shutdown()"><i class="fa fa-lg fa-power-off"></i>&nbsp;Power Off</button>
 				</div>
-				<button class="btn btn-primary navbar-btn" title="Toggle Background Image" ng-click="settings.toggleBackgroundImage()"><i class="fa fa-lg" ng-class="settings.hasBackgroundImage() ? 'fa-toggle-on' : 'fa-toggle-off'"></i>&nbsp;<i class="fa fa-lg fa-image"></i></button>
-				<button class="btn btn-primary navbar-btn" ng-click="selectStorage()"><i class="fa fa-lg fa-database"></i>&nbsp;Storage</button>
-				<button class="btn btn-primary navbar-btn" ng-click="selectAutoSave()"><i class="fa fa-lg fa-hourglass-start"></i>&nbsp;AutoSave</button>
-				<button class="btn btn-primary navbar-btn" title="Toggle Development Mode" ng-click="settings.toggleDevelopment()"><i class="fa fa-lg" ng-class="settings.isDevelopment() ? 'fa-toggle-on' : 'fa-toggle-off'"></i>&nbsp;<i class="fa fa-lg fa-gear"></i></button>
-				<button class="btn btn-warning navbar-btn" ng-if="settings.isDevelopment()" ng-click="reload()"><i class="fa fa-lg fa-refresh"></i>&nbsp;Refresh</button>
-				<button class="btn btn-warning navbar-btn" ng-click="selectUser()"><i class="fa fa-lg fa-users"></i>&nbsp;Users</button>
 			</div>
 		</div>
 	</body>
