--- a/public/users.html
+++ b/public/users.html
@@ -15,10 +15,10 @@
 				</tr>
 			</thead>
 			<tbody ng-switch="users.length">
-				<tr ng-switch-default ng-repeat="user in users | orderBy: 'username'" ng-model="user" ng-class="isCurrentUser(user) ? 'bg-warning' : ''">
-					<td role="button" ng-class="isCurrentUser(user) ? 'text-warning' : 'text-success'" ng-click="isCurrentUser(user) ? logoutUser(user) : loginUser(user)"><i class="fa fa-lg fa-fw" ng-class="isCurrentUser(user) ? 'fa-lock' : 'fa-unlock'"></i>&nbsp;{{user.username}}</td>
-					<td>{{user.last_modified | date: 'medium'}}</td>
-					<td>{{user.last_login | date: 'medium'}}</td>
+				<tr ng-switch-default ng-repeat="user in users | orderBy: 'username'" ng-model="user" ng-class="isCurrent(user) ? 'bg-warning' : ''">
+					<td role="button" ng-class="isCurrent(user) ? 'text-warning' : 'text-success'" ng-click="isCurrent(user) ? logoutUser(user) : loginUser(user)"><i class="fa fa-lg fa-fw" ng-class="isCurrent(user) ? 'fa-lock' : 'fa-unlock'"></i>&nbsp;{{user.username}}</td>
+					<td>{{user.modified | date: 'short'}}</td>
+					<td>{{user.loggedin | date: 'short'}}</td>
 					<td>
 						<i class="fa fa-lg fa-fw fa-edit" role="button" title="Change Username" ng-click="changeUsername(user)"></i>
 						<i class="fa fa-lg fa-fw fa-user-secret" role="button" title="Change Password" ng-click="changePassword(user)"></i>
@@ -30,13 +30,13 @@
 				</tr>
 				<tr>
 					<td class="vertical-center" colspan="2">
-						<input type="text" class="form-control input-sm" placeholder="Enter username" ng-minlength="1" ng-trim="true" ng-model="username" required autofocus ng-enter="new_user.$valid && addUser()"></input>
+						<input type="text" class="form-control input-sm" placeholder="Enter username" ng-minlength="1" ng-trim="true" ng-model="username" required autofocus ng-enter="new_user.$valid && addUser(username, password)"></input>
 					</td>
 					<td>
-						<input type="password" class="form-control input-sm" placeholder="Enter password" ng-minlength="3" ng-model="password" required ng-enter="new_user.$valid && addUser()"></input>
+						<input type="password" class="form-control input-sm" placeholder="Enter password" ng-minlength="3" ng-model="password" required ng-enter="new_user.$valid && addUser(username, password)"></input>
 					</td>
 					<td class="vertical-center">
-						<i role="button" class="fa fa-lg fa-fw fa-user-plus" ng-class="new_user.$valid ? '' : 'text-muted'" title="Add User" ng-click="new_user.$valid && addUser()"></i>
+						<i role="button" class="fa fa-lg fa-fw fa-user-plus" ng-class="new_user.$valid ? '' : 'text-muted'" title="Add User" ng-click="new_user.$valid && addUser(username, password)"></i>
 					</td>
 				</tr>
 			</tbody>
