Fixes to the Storage dialog, showing the wrong status

--- a/public/storage.html
+++ b/public/storage.html
@@ -1,7 +1,7 @@
 <div class="modal-header bg-success">
 	<h4 class="modal-title pull-left">Storage Settings</h4>
 	<i role="button" class="fa fa-2x fa-close pull-right" ng-click="$dismiss('cancel')"></i>
-	<i class="fa fa-2x fa-spinner fa-spin pull-right" ng-show="loading == true"></i>
+	<i class="fa fa-2x fa-spinner fa-spin pull-right" ng-show="loading"></i>
 </div>
 <div class="modal-body">
 	<table class="table table-condensed">
