Moved all of the dependent libraries to their folder 'lib' folders

--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
 	<head>
 		<title>SoloWriter</title>
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
-		<link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="styles/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="styles/lib/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="styles/lib/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="styles/solo.css">
-		<script type="text/javascript" src="scripts/angular.min.js"></script>
-		<script type="text/javascript" src="scripts/angular-touch.min.js"></script>
-		<script type="text/javascript" src="scripts/angular-animate.min.js"></script>
-		<script type="text/javascript" src="scripts/angular-idle.js"></script>
-		<script type="text/javascript" src="scripts/ui-bootstrap-tpls-2.0.1.min.js"></script>
+		<script type="text/javascript" src="scripts/lib/angular.min.js"></script>
+		<script type="text/javascript" src="scripts/lib/angular-touch.min.js"></script>
+		<script type="text/javascript" src="scripts/lib/angular-animate.min.js"></script>
+		<script type="text/javascript" src="scripts/lib/angular-idle.js"></script>
+		<script type="text/javascript" src="scripts/lib/ui-bootstrap-tpls-2.0.1.min.js"></script>
 		<script type="text/javascript" src="scripts/solo.js"></script>
 	</head>
 	<body ng-controller="SoloWriterCtrl">
