--- a/public/dialogs/storage.html
+++ b/public/dialogs/storage.html
@@ -7,25 +7,25 @@
 	<table class="table table-condensed">
 		<thead>
 			<tr>
-				<th></th>
-				<th></th>
+				<th>Type</th>
 				<th>Location</th>
 				<th>Capacity</th>
 				<th>Available</th>
+				<th>Actions</th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr ng-repeat="volume in volumes">
+				<td><i class="fa fa-lg fa-fw" ng-class="volume.getIcon()"></i></td>
+				<td>{{volume.label}}</td>
+				<td>{{volume.total_space | bytes}}</td>
+				<td>{{volume.available_space | bytes}}</td>
 				<td>
 					<i ng-show="isOperatingOn(volume)" class="fa fa-lg fa-fw fa-spinner fa-spin"></i>
 					<i ng-show="isSelectable(volume)" role="button" class="fa fa-lg fa-fw" title="Select" ng-class="isCurrent(volume) ? 'fa-check-square-o' : 'fa-square-o'" ng-click="select(volume)"></i>
 					<i ng-show="isUnmountable(volume)" role="button" class="fa fa-lg fa-fw fa-unlink" title="Disconnect" ng-click="unmount(volume)"></i>
 					<i ng-show="isMountable(volume)" role="button" class="fa fa-lg fa-fw fa-link" title="Connect" ng-click="mount(volume)"></i>
 				</td>
-				<td><i class="fa fa-lg fa-fw" ng-class="volume.getIcon()"></i></td>
-				<td>{{volume.label}}</td>
-				<td>{{volume.total_space | bytes}}</td>
-				<td>{{volume.available_space | bytes}}</td>
 			</tr>
 		</tbody>
 	</table>
