--- a/public/dialogs/settings.html
+++ b/public/dialogs/settings.html
@@ -67,5 +67,6 @@
 </div>
 <div class="modal-footer">
 	<button class="btn btn-primary" ng-click="selectStorage()"><i class="fa fa-lg fa-usb"></i>&nbsp;Storage</button>
+	<button class="btn btn-primary" ng-click="selectNetwork()"><i class="fa fa-lg fa-wifi"></i>&nbsp;Network</button>
 	<button class="btn btn-primary" type="submit" ng-click="ok()">OK</button>
 </div>
