--- a/public/dialogs/password.html
+++ b/public/dialogs/password.html
@@ -8,13 +8,13 @@
 		<div class="form-group">
 			<label for="password" class="col-sm-3 control-label">Password</label>
 			<div class="col-sm-9">
-				<input type="password" class="form-control" placeholder="Enter password" autofocus ng-minlength="3" ng-model="password" ng-enter="ok()"></input>
+				<input type="password" name="password" class="form-control" placeholder="Enter password" autofocus ng-minlength="3" ng-model="password" ng-enter="ok()"></input>
 			</div>
 		</div>
 		<div class="form-group" ng-if="extra.label">
-			<label for="password" class="col-sm-3 control-label">{{extra.label}}</label>
+			<label for="extra" class="col-sm-3 control-label">{{extra.label}}</label>
 			<div class="col-sm-9">
-				<input type="{{extra.is_password ? 'password' : 'text'}}" class="form-control" placeholder="Enter {{extra.label | lowercase}}" ng-model="extra.value" ng-enter="ok()"></input>
+				<input type="{{extra.is_password ? 'password' : 'text'}}" name="extra" class="form-control" placeholder="Enter {{extra.label | lowercase}}" ng-model="extra.value" ng-enter="ok()"></input>
 			</div>
 		</div>
 	</form>
