--- a/public/dialogs/email.html
+++ b/public/dialogs/email.html
@@ -7,7 +7,10 @@
 		<div class="form-group">
 			<label for="sender" class="col-sm-3 control-label">Username</label>
 			<div class="col-sm-9">
-				<input type="email" class="form-control" placeholder="Enter sender" ng-minlength="5" ng-model="sender" ng-enter="ok()" ng-required autofocus></input>
+				<div class="input-group">
+					<input type="email" class="form-control" placeholder="Enter sender" ng-pattern="[a-zA-Z0-9\.\-\+_]+" ng-trim="true" ng-model="sender" ng-enter="ok()" ng-required autofocus></input>
+					<span class="input-group-addon">@gmail.com</span>
+				</div>
 			</div>
 		</div>
 		<div class="form-group">
@@ -19,13 +22,13 @@
 		<div class="form-group">
 			<label for="recipient" class="col-sm-3 control-label">Recipient</label>
 			<div class="col-sm-9">
-				<input type="email" class="form-control" placeholder="{{sender}}" ng-model="recipient" ng-enter="ok()"></input>
+				<input type="email" class="form-control" placeholder="{{sender}}" ng-pattern="[a-zA-Z0-9\.\-\+_]+@[a-z0-9\.\-_]+" ng-trim="true" ng-model="recipient" ng-enter="ok()"></input>
 			</div>
 		</div>
 		<div class="form-group">
 			<label for="subject" class="col-sm-3 control-label">Subject</label>
 			<div class="col-sm-9">
-				<input type="text" class="form-control" placeholder="Enter subject" ng-minlength="1" ng-model="subject" ng-enter="ok()"></input>
+				<input type="text" class="form-control" placeholder="Enter subject" ng-minlength="1" ng-trim="true" ng-model="subject" ng-enter="ok()"></input>
 			</div>
 		</div>
 	</form>
