Add character & word count to the save dialog.

--- a/public/dialogs/save_doc.html
+++ b/public/dialogs/save_doc.html
@@ -12,3 +12,6 @@
 		</div>
 	</form>
 </div>
+<div class="modal-footer bg-primary">
+	<p>{{counts.characters | number}} characters / {{counts.words | number}} words</p>
+</div>
