Fix: only do slideshow, if it is in fact enabled.

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 			<p>Shutting down...</p>
 		</div>
 		<div ng-if="isLocked()" ng-controller="SlideShowCtrl" class="slideshow">
-			<div uib-carousel interval="interval" active="active" no-pause="true" no-wrap="false">
+			<div ng-if="isLockScreenEnabled()" uib-carousel interval="interval" active="active" no-pause="true" no-wrap="false">
 				<div uib-slide ng-repeat="slide in slides" index="$index">
 					<img ng-src="{{slide.image}}">
 				</div>
