Fix: only enable the Send button if a network is available.

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 				<button class="btn btn-warning navbar-btn" ng-click="resetDoc(true)"><i class="fa fa-lg fa-file-text-o"></i>&nbsp;New</button>
 				<button class="btn btn-success navbar-btn" ng-click="openDoc(true)"><i class="fa fa-lg fa-folder-open-o"></i>&nbsp;Open</button>
 				<button class="btn btn-primary navbar-btn" ng-click="saveDoc()" ng-disabled="!currentDocument.canSave()"><i class="fa fa-lg fa-save"></i>&nbsp;Save</button>
-				<button class="btn btn-primary navbar-btn" ng-click="sendDoc()"><i class="fa fa-lg fa-send"></i>&nbsp;Send</button>
+				<button class="btn btn-primary navbar-btn" ng-click="sendDoc()" ng-disabled="!hasNetwork()"><i class="fa fa-lg fa-send"></i>&nbsp;Send</button>
 			</div>
 			<div class="pull-right">
 				<button class="btn btn-primary navbar-btn" ng-click="selectSettings()"><i class="fa fa-lg fa-gear"></i>&nbsp;Settings</button>
